# 2024_dev_talus_prospect

./: .gitignore  README.md  Taskfile.yml  build_annot.py  ingest_polars.py  pyproject.toml
data/: annot.json  partitions.txt
part_data/: get_data.bash
python/: Taskfile.yml  pyproject.toml
python/elfragmentarust_train/: data_utils.py  fragment_dataset.py  training.py
python/tests/: test_dataset.py  test_onnx_export.py  test_utils.py
python_packages/: Taskfile.yml
python_packages/elfragmentadonnx/: Taskfile.yml  pyproject.toml
python_packages/elfragmentadonnx/src/elfragmentadonnx/: model.py
python_packages/elfragmentadonnx/src/elfragmentadonnx/data/: hparams.yaml  model.onnx  model_5.onnx.data  model_9.onnx.data  token_counts.json  token_counts_9.json
python_packages/elfragmentadonnx/tests/: test_conversion.py  test_default_model.py
python_packages/elfragmentador_core/: Taskfile.yml  pyproject.toml
python_packages/elfragmentador_core/src/elfragmentador_core/: config.py  converter.py  data_utils.py  koina.py  nce.py
python_packages/elfragmentador_core/tests/: test_ev_nce.py  test_intensity_conv.py
python_packages/elfragmentador_train/: .gitignore  Taskfile.yml  pyproject.toml
python_packages/elfragmentador_train/src/elfragmentador_train/: data_utils.py  fragment_dataset.py  mods.txt  training.py  transformer_model.py  utils_extra.py
python_packages/elfragmentador_train/tests/: test_dataset.py  test_model.py  test_onnx_export.py  test_utils.py
rust/: Cargo.toml
rust/src/: main.rs
