# https://docs.astral.sh/uv/concepts/projects/workspaces/#workspace-sources
# https://docs.astral.sh/uv/concepts/projects/workspaces/#workspace-layouts

[project]
name = "elfragmentarust"
version = "0.22.0"
requires-python = ">=3.11, <3.13"
dependencies = [
    "elfragmentador_train",
    "elfragmentador_core",
    "elfragmentadonnx",
    "ruff",
    "pytest",
    "bumpver",
    "ipykernel",
    "matplotlib",
    "hatchling",
]
license = "Apache-2.0"

[tool.uv.sources]
elfragmentador_train = { workspace = true }
elfragmentador_core = { workspace = true }
elfragmentadonnx = { workspace = true }

[tool.uv.workspace]
members = [
    "python_packages/elfragmentador_train",
    "python_packages/elfragmentador_core",
    "python_packages/elfragmentadonnx",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.uv]
preview = true
find-links = ["https://download.pytorch.org/whl/torch_stable.html"]

[tool.bumpver]
current_version = "0.22.0"
version_pattern = "MAJOR.MINOR.PATCH[-PYTAGNUM]"
tag_message = "v{new_version}"
commit_message = "chore: bump version to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"python_packages/**/pyproject.toml" = ['version = "{version}"$']
"pyproject.toml" = ['version = "{version}"$']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
# select = ["E", "F", "B","W", "C", "I", "D", "UP", "N", "ANN", "T20", "COM"]
ignore = ["D401", "D100", "N812", "COM812", "D105"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"**__init__.py" = ["D104"]
"**/tests/**.py" = ["ANN201", "ANN001", "ANN202", "D100", "D103"]
