# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elfragmentadonnx"
version = "0.19.0"
description = "A transformer model package for training"
authors = [{ name = "J. Sebastian Paez", email = "spaez@talus.bio" }]
requires-python = ">=3.11"
dependencies = [
  "onnx>=1.17.0",
  "onnxruntime>=1.16.0",
  "numpy>=2.0",
  "onnxscript>=0.1.0.dev20241112",
  "rustyms>=0.8.3",
  "rich>=13.9.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["elfragmentadonnx"]

# Dev dependencies
[tool.optional-dependencies]
dev = ["pytest", "ruff"]

