[project]
name = "elfragmentador_core"
version = "0.22.2"
description = "A transformer model package for training"
authors = [{ name = "J. Sebastian Paez", email = "spaez@talus.bio" }]
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "rustyms>=0.8.3",
  "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
