[project]
name = "elfragmentador_core"
version = "0.23.0"
description = "A transformer model package for training"
authors = [{ name = "J. Sebastian Paez", email = "spaez@talus.bio" }]
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0, < 3.0",
  "rustyms>=0.8.3, < 0.9.0",
  "requests>=2.32.3, < 3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
